Use swap font display to avoid flash of invisible text (FOIT)

--- a/_sass/latolatinweb.scss
+++ b/_sass/latolatinweb.scss
@@ -8,6 +8,7 @@
          url('fonts/LatoLatin-Bold.ttf') format('truetype');
     font-style: normal;
     font-weight: bold;
+    font-display: swap;
     text-rendering: optimizeLegibility;
 }
 
@@ -21,6 +22,7 @@
          url('fonts/LatoLatin-BoldItalic.ttf') format('truetype');
     font-style: italic;
     font-weight: bold;
+    font-display: swap;
     text-rendering: optimizeLegibility;
 }
 
@@ -34,6 +36,7 @@
          url('fonts/LatoLatin-Italic.ttf') format('truetype');
     font-style: italic;
     font-weight: normal;
+    font-display: swap;
     text-rendering: optimizeLegibility;
 }
 
@@ -47,5 +50,6 @@
          url('fonts/LatoLatin-Regular.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
     text-rendering: optimizeLegibility;
 }
